[package]
name = "cash_tx_builder"
version = "0.3.1"
authors = ["haryu703"]
edition = "2018"

license = "MIT"
description = "Transaction builder for Bitcoin Cash"
repository = "https://github.com/haryu703/cash-tx-builder"
readme = "README.md"
keywords = ["bitcoin", "cash", "BCH"]

[dependencies]
failure = "0.1.5"
sha2 = "0.8.0"
hex = "0.3.2"
serde = {version = "1.0", optional = true, features = ["derive"]}

[dev-dependencies]
hex-literal = "0.1.4"
bch_addr = "0.1.0"
serde_json = "1.0"
